--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </main>
 
     <footer>
-      <p>I can code!</p>
+      <p>I'm the coolest man in space!</p>
     </footer>
   </body>
 </html>
