--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet"  href="./assets/style.css"
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -18,12 +19,22 @@
           <li>The head element contains information about the webpage</li>
           <li>The body element represents the visible content shown to the user</li>
           <li>Meta elements are invisible elements used by the webpage and search engines</li>
+          <li>HTML elements are stored in brackets like these: <></li>
+        </ul>
+        <h3>Common HTML Elements</h3>
+        <ul>
+          <li>h1-6 defines the header. These should be used in order, and generally h1 is used only once</li>
+          <li>ul and ol define unordered lists and ordered lists </li>
         </ul>
       </section>
       <section class="card" id="css-section" >
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element</li>
+          <li>A padding indicates how much space we want around the content inside an element</li>
+          <li>A border is a box drawn around a selection</li>
+          <li>A shadow can then be added with the box shadow property, which is then defined by its offset</li>
+          <li>A period preceding a selector designates it as a class selector</li>
         </ul>
       </section>
       <section class="card" id="git-section">
@@ -34,6 +45,11 @@
           <li>pwd: prints the working directory</li>
           <li>git status: prints the current working branch</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>git checkout branch-name: switches working branch</li>
+          <li>git pull origin main/master: pulls files from a branch into your working branch</li>
+          <li>git commit: commits current changes to working branch</li>
+          <li>git commit -m "message": commits current changes to working branch with an added message. This should be used every time.</li>
+          <li>git push origin branch-name: creates a pull request from the specified branch</li>
         </ul>
       </section>
       <section class="card" id="javascript-section">
