--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>A function is a set of instructions that allow a computer to perform a specified task</li>
+          <li>A function must be defined in order to be called into action, but it cannot execute without being called</li>
+          <li>Good use of the console.log command makes your site clearer and easier to code.</li>
         </ul>
       </section>
     </main>
