--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <li>Control flow is the order in which a computer executes code in a script.</li>
           <li>A function is a set of instructions that allow a computer to perform a specified task</li>
           <li>A function must be defined in order to be called into action, but it cannot execute without being called</li>
-          <li>Good use of the console.log command makes your site clearer and easier to code.</li>
+          <li>Good use of the console.log command makes your site clearer and easier to </li>
         </ul>
       </section>
     </main>
